--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="rtc.sasithon.jirawan.healthchack.MainActivity"
-    android:background="@drawable/bg25">
+    android:background="@drawable/bcckgrold">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView4"
+        android:src="@drawable/people" />
 
     <ImageView
         android:layout_width="match_parent"
@@ -33,4 +39,5 @@
         android:id="@+id/imageView3"
         android:layout_alignParentBottom="true"
         android:background="#96ebb41a" />
+
 </RelativeLayout>
